fix: fixed horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ html,
 body,
 #root {
   height: 100%;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
